[package]
name = "bevy-jam-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Bevy
bevy = "0.10.0"
# Bevy plugins
bevy_egui = "0.20.2"
bevy_mod_picking = "0.12.0"
smooth-bevy-cameras = "0.8.0"


